--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "heroicons-react": "^1.3.0",
     "next": "10.0.7",
     "next-google-fonts": "^1.2.1",
+    "nextjs-progressbar": "^0.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
