--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nextjs-progressbar": "^0.0.7",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
+    "react-alice-carousel": "^2.4.0",
     "react-dom": "17.0.1"
   }
 }
