--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-alice-carousel": "^2.4.0",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-rating": "^2.0.5"
   }
 }
