--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.7",
     "nextjs-progressbar": "^0.0.7",
     "nprogress": "^0.2.0",
+    "pure-react-carousel": "^1.27.6",
     "react": "17.0.1",
     "react-alice-carousel": "^2.4.0",
     "react-dom": "17.0.1",
