--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.1",
     "react-alice-carousel": "^2.4.0",
     "react-dom": "17.0.1",
+    "react-leaf-carousel": "^2.0.3",
     "react-rating": "^2.0.5"
   }
 }
